feat: project basic setup complete and required permission asked on button click

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ImagePicker with Compression</string>
+    <string name="permission_not_granted">Permissions not grated</string>
 </resources>
