--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="file_provider_name" translatable="false">.fileProvider</string>
     <string name="app_name">ImagePicker with Compression</string>
     <string name="permission_not_granted">Permissions not grated</string>
+    <string name="select_capture_image">Please select or capture image</string>
 </resources>
